modifying requirement.tx
